--- a/public_html/index.html
+++ b/public_html/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hailicorn</title>
-  <meta name="description" content="">
+  <title>Hailicorn Consultancy Limited</title>
+  <meta name="description" content="Discover a spectrum of IT solutions and services tailored to your unique business needs.">
   <link rel="icon" href="asset/bOzCTi12ciJD.png" type="image/png" sizes="16x16">
   <link rel="icon" href="asset/BMJ6Tt1EqPQR.png" type="image/png" sizes="32x32">
   <link rel="apple-touch-icon" href="asset/5vXSubQacWHw.png" sizes="180x180">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://paWGO7XiNOnG.site">
-  <meta property="og:title" content="Hailicorn">
+  <meta property="og:url" content="https://www.hailicorn.com">
+  <meta property="og:title" content="Discover a spectrum of IT solutions and services tailored to your unique business needs.">
   <meta property="og:image" content="asset/72bkLFKQZvIb.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="1200">
@@ -72,7 +72,7 @@
       -webkit-user-drag: none;
       -moz-user-drag: none;
       -o-user-drag: none;
-      user-drag: none;
+      /* user-drag: none; */
       -webkit-touch-callout: none;
     }
 
@@ -4719,7 +4719,7 @@
                       style="opacity:1.0;display:flex;box-sizing:border-box;flex-direction:column;justify-content:flex-start;width:100%;height:100%;">
                       <p id="jq3Y5P8aD1PJsw5W"
                         style="color:#000000;font-family:YAFdJvSyp_k-2;line-height:1.375em;text-transform:none;letter-spacing:0em;">
-                        <span id="UZX3WJK9WdAaRGmd" style="color:#000000;">Hailicorn</span><br></p>
+                        <span id="UZX3WJK9WdAaRGmd" style="color:#000000;">Hailicorn Consultancy Limited</span><br></p>
                     </div>
                   </div>
                 </div>
@@ -5214,6 +5214,7 @@
         </div>
       </div>
     </section>
+<!--
     <section id="page-4"
       style="position:relative;overflow:hidden;display:grid;align-items:center;grid-template-columns:auto 100rem auto;z-index:0;margin-top:-1px;">
       <div id="LTbPDNu9lzgDeRXv"
@@ -5278,6 +5279,7 @@
         </div>
       </div>
     </section>
+  -->
     <section id="page-5"
       style="position:relative;overflow:hidden;display:grid;align-items:center;grid-template-columns:auto 100rem auto;z-index:0;margin-top:-1px;">
       <div id="dtCciRlip4lCirqd"
@@ -5341,7 +5343,7 @@
             <div id="J6BnYgiA7OQovXE1"
               style="opacity:1.0;display:flex;box-sizing:border-box;flex-direction:column;justify-content:flex-start;width:100%;height:100%;">
               <p id="Srn2PpZr1WDJOTu3"
-                style="color:#000000;font-family:YAFdJjTk5UU-0;line-height:1.39772886em;text-align:center;"><span
+                style="color:#000000;font-family:YAFdJjTk5UU-0;line-height:1.39772886em;text-align:center;font-size:x-large;"><span
                   id="HAlWbhrNl08Ql2jJ" style="color:#000000;">British Columbia, Canada</span><br></p>
             </div>
           </div>
@@ -5361,7 +5363,7 @@
             <div id="mSxtV0W0Tb9PFKdm"
               style="opacity:1.0;display:flex;box-sizing:border-box;flex-direction:column;justify-content:flex-start;width:100%;height:100%;">
               <p id="XRzqKXVwWqFHY0fD" style="color:#000000;font-family:YAFdJjTk5UU-0;line-height:1.375em;"><span
-                  id="rp9QJjKoniouFnFm" style="color:#000000;">hailicornca@gmail.com</span><br></p>
+                  id="rp9QJjKoniouFnFm" style="color:#000000;">&nbsp;&nbsp;info@hailicorn.com</span><br></p>
             </div>
           </div>
         </div>
