--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hailicorn Consultancy Limited</title>
   <meta name="description" content="Discover a spectrum of IT solutions and services tailored to your unique business needs.">
-  <link rel="icon" href="asset/bOzCTi12ciJD.png" type="image/png" sizes="16x16">
-  <link rel="icon" href="asset/BMJ6Tt1EqPQR.png" type="image/png" sizes="32x32">
-  <link rel="apple-touch-icon" href="asset/5vXSubQacWHw.png" sizes="180x180">
+  <link rel="icon" href="asset/pX1B7UzSzTEx.svg">
+  <link rel="apple-touch-icon" href="asset/pX1B7UzSzTEx.svg" sizes="180x180">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.hailicorn.com">
   <meta property="og:title" content="Discover a spectrum of IT solutions and services tailored to your unique business needs.">
@@ -5362,8 +5361,7 @@
           <div id="XhsRHiy20bj142q1" style="box-sizing:border-box;width:100%;height:100%;transform:rotate(0deg);">
             <div id="mSxtV0W0Tb9PFKdm"
               style="opacity:1.0;display:flex;box-sizing:border-box;flex-direction:column;justify-content:flex-start;width:100%;height:100%;">
-              <p id="XRzqKXVwWqFHY0fD" style="color:#000000;font-family:YAFdJjTk5UU-0;line-height:1.375em;"><span
-                  id="rp9QJjKoniouFnFm" style="color:#000000;">&nbsp;&nbsp;info@hailicorn.com</span><br></p>
+              <p id="XRzqKXVwWqFHY0fD" style="color:#000000;font-family:YAFdJjTk5UU-0;line-height:1.375em;">&nbsp;&nbsp;<u><a href="mailto:info@hailicorn.com">info@hailicorn.com</a></u><br></p>
             </div>
           </div>
         </div>
